--- a/specifyweb/frontend/js_src/css/welcome.css
+++ b/specifyweb/frontend/js_src/css/welcome.css
@@ -2,6 +2,7 @@
 
 .specify-welcome {
     width: 100%;
+    margin-top: 1rem;
 }
 
 img.specify-splash {
